--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     }
   ],
   "require": {
-    "php": "5.5.0",
+    "php": ">=5.5.0",
     "yiisoft/yii2": "^2.0",
     "yiisoft/yii2-bootstrap": "^2.0"
   }
