--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   ],
   "require": {
     "php": ">=5.5.0",
-    "yiisoft/yii2": "^2.0",
+    "yiisoft/yii2": ">=2.0.6",
     "yiisoft/yii2-bootstrap": "^2.0"
   },
   "autoload": {
